# schenesort

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  justfile  ollama-setup.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
schenesort.yazi/: README.md  main.lua  schenesort.config
src/schenesort/: __init__.py  cli.py  config.py  db.py  thumbnails.py  xmp.py
src/schenesort/tui/: __init__.py  app.py  grid_app.py
src/schenesort/tui/widgets/: __init__.py  filter_panel.py  image_preview.py  metadata_panel.py  thumbnail_grid.py
tests/: test_cli.py  test_sanitise.py  test_sanitize.py
